--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "bootstrap": "^3.3.6",
+    "classie": "^1.0.0",
+    "desandro-classie": "^1.0.1",
     "jquery": "^2.2.3",
     "node-sass": "^3.7.0",
     "nodemon": "^1.9.2"
